infra/kubernetes/cluster-01/apps/default/teamcity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity
  namespace: default
  labels:
    app: teamcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity
  template:
    metadata:
      labels:
        app: teamcity
    spec:
      containers:
        - name: teamcity
          image: jetbrains/teamcity-server:2023.11.4@sha256:3deaa82f250afeb98e03b2505f08c173fae424dbe3c533540d4b310ac1cc80a5
          ports:
            - name: web
              containerPort: 8111
