infra/kubernetes/cluster-01/apps/default/teamcity/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teamcity
  namespace: default
spec:
  selector:
    app: teamcity
  ports:
    - name: web
      protocol: TCP
      port: 8111
      targetPort: web
